--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/platform-server": "^6.0.1",
     "@angular/router": "^6.0.1",
+    "angular-loading-bar": "^0.9.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "hoek": "^4.2.1",
